changed: renovate: added auto-merge functionality for Renovate PRs with automerge label changed: renovate: included labels for dependencies and renovate in wireguard configuration

--- a/renovate.json
+++ b/renovate.json
@@ -74,6 +74,11 @@
                 "linuxserver/wireguard",
                 "/^docker\\.io\\/linuxserver\\/wireguard$/"
             ],
+            "labels": [
+                "dependencies",
+                "renovate",
+                "automerge"
+            ],
             "automerge": true,
             "automergeType": "pr",
             "description": "Auto-commit and auto-merge wireguard image bumps"
