--- a/.github/workflows/renovate-chart-update.yml
+++ b/.github/workflows/renovate-chart-update.yml
@@ -70,3 +70,32 @@ jobs:
                 body: `🤖 Chart metadata automatically updated:\n- Charts: ${charts}\n- Version bumped (patch +1)\n- Change log entry added with PR link`
               });
             }
+
+      - name: Enable GitHub auto-merge for Renovate PRs with automerge label
+        uses: actions/github-script@v7
+        env:
+          PR_ID: ${{ github.event.pull_request.node_id }}
+          PR_LABELS: ${{ join(github.event.pull_request.labels.*.name, ',') }}
+        with:
+          script: |
+            const labels = (process.env.PR_LABELS || '').split(',').map(l => l.trim()).filter(Boolean);
+            const hasAutomergeLabel = labels.includes('automerge');
+
+            if (!hasAutomergeLabel) {
+              core.info('automerge label not present, skipping enablePullRequestAutoMerge');
+              return;
+            }
+
+            try {
+              const result = await github.graphql(
+                `mutation($prId:ID!){
+                  enablePullRequestAutoMerge(input:{pullRequestId:$prId, mergeMethod:SQUASH}){
+                    pullRequest { number }
+                  }
+                }`,
+                { prId: process.env.PR_ID }
+              );
+              core.info(`Auto-merge enabled via GitHub for PR: ${JSON.stringify(result)}`);
+            } catch (err) {
+              core.warning(`Could not enable auto-merge: ${err.message}`);
+            }
