--- a/.github/workflows/renovate-chart-update.yml
+++ b/.github/workflows/renovate-chart-update.yml
@@ -1,8 +1,8 @@
 name: Update Chart Metadata on Renovate PRs
 
 on:
-  pull_request:
-    types: [opened, synchronize]
+  pull_request_target:
+    types: [opened, synchronize, reopened]
     branches:
       - main
 
@@ -14,19 +14,32 @@ jobs:
       pull-requests: write
 
     steps:
+      - name: Detect Renovate PR
+        id: renovate
+        run: |
+          if [[ "${{ github.actor }}" == "renovate[bot]" ]] || [[ "${{ github.event.pull_request.user.login }}" == "renovate[bot]" ]]; then
+            echo "is_renovate=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "is_renovate=false" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Checkout PR branch
+        if: steps.renovate.outputs.is_renovate == 'true'
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Configure Git
+        if: steps.renovate.outputs.is_renovate == 'true'
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Update Chart.yaml metadata
+        if: steps.renovate.outputs.is_renovate == 'true'
         env:
           GH_TOKEN: ${{ github.token }}
           PR_LABELS: ${{ join(github.event.pull_request.labels.*.name, ',') }}
@@ -36,6 +49,7 @@ jobs:
             "${{ github.event.pull_request.html_url }}"
 
       - name: Commit and push changes
+        if: steps.renovate.outputs.is_renovate == 'true'
         run: |
           if git diff --quiet; then
             echo "No changes to commit"
@@ -47,6 +61,7 @@ jobs:
           git push
 
       - name: Comment on PR
+        if: steps.renovate.outputs.is_renovate == 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -70,6 +85,7 @@ jobs:
             }
 
       - name: Enable GitHub auto-merge for Renovate PRs with automerge label
+        if: steps.renovate.outputs.is_renovate == 'true'
         uses: actions/github-script@v7
         env:
           PR_ID: ${{ github.event.pull_request.node_id }}
@@ -97,3 +113,8 @@ jobs:
             } catch (err) {
               core.warning(`Could not enable auto-merge: ${err.message}`);
             }
+
+      - name: Skip non-Renovate PRs
+        if: steps.renovate.outputs.is_renovate != 'true'
+        run: |
+          echo "Not a Renovate PR; skipping chart metadata update."
