chore(wordpress): update version to 2.2.0-beta.5

--- a/charts/wordpress/templates/deployment.yaml
+++ b/charts/wordpress/templates/deployment.yaml
@@ -164,12 +164,12 @@ spec:
             cp /scripts/base.sh /tmp/base.sh
             chmod +x /tmp/base.sh
             /tmp/base.sh
-            
+
             # copy and run htaccess-setup.sh
             cp /scripts/htaccess-setup.sh /tmp/htaccess-setup.sh
             chmod +x /tmp/htaccess-setup.sh
             /tmp/htaccess-setup.sh
-            
+
             # Prepare library scripts for init container
             mkdir -p /tmp/lib
             cp /scripts/lib-core.sh /tmp/lib/lib-core.sh
@@ -207,6 +207,17 @@ spec:
               cp /scripts/init.sh /tmp/init.sh
               chmod +x /tmp/init.sh
               /tmp/init.sh
+          envFrom:
+          {{- if or .Values.extraEnvVarsCM .Values.extraEnvVarsSecret }}
+            {{- if .Values.extraEnvVarsCM }}
+            - configMapRef:
+                name: {{ .Values.extraEnvVarsCM }}
+            {{- end }}
+            {{- if .Values.extraEnvVarsSecret }}
+            - secretRef:
+                name: {{ .Values.extraEnvVarsSecret }}
+            {{- end }}
+          {{- end }}
           env:
             - name: WORDPRESS_PATH
               value: /var/www/html
@@ -294,14 +305,14 @@ spec:
               value: {{ .Values.wordpress.init.lastname | quote }}
             {{- end }}
             {{- end }}
-          {{ if and .Values.wordpress.configExtraConfigMap.name  (not .Values.wordpress.configExtraSecret.name) }}  
+          {{ if and .Values.wordpress.configExtraConfigMap.name  (not .Values.wordpress.configExtraSecret.name) }}
             - name: WORDPRESS_CONFIG_EXTRA
               valueFrom:
                 configMapKeyRef:
                   name: {{ .Values.wordpress.configExtraConfigMap.name }}
                   key: {{ .Values.wordpress.configExtraConfigMap.key | default "wordpress.configExtra" }}
           {{- end }}
-          {{ if .Values.wordpress.configExtraSecret.name }}  
+          {{ if .Values.wordpress.configExtraSecret.name }}
             - name: WORDPRESS_CONFIG_EXTRA
               valueFrom:
                 secretKeyRef:
@@ -340,7 +351,7 @@ spec:
               value: {{ .Values.wordpress.url | quote }}
             - name: WP_SITEURL
               value: {{ .Values.wordpress.url | quote }}
-          {{ if .Values.wordpress.debug }}  
+          {{ if .Values.wordpress.debug }}
             - name: WORDPRESS_DEBUG
               value: "true"
           {{- end }}
@@ -377,11 +388,11 @@ spec:
             - name: WORDPRESS_DEBUG
               value: "true"
           {{- end }}
-          {{ if .Values.wordpress.init.enabled }}  
+          {{ if .Values.wordpress.init.enabled }}
             - name: WP_INIT
               value: {{ .Values.wordpress.init.enabled | quote }}
           {{- end }}
-          {{ if .Values.metrics.wordpress.enabled }}  
+          {{ if .Values.metrics.wordpress.enabled }}
             - name: SLYMETRICS_BEARER_TOKEN
               valueFrom:
                 secretKeyRef:
@@ -393,14 +404,14 @@ spec:
                   name: {{ include "metrics.wordpress.fullname" . }}
                   key: wordpress.metrics.encryptionKey
           {{- end }}
-          {{ if and .Values.wordpress.configExtraConfigMap.name  (not .Values.wordpress.configExtraSecret.name) }}  
+          {{ if and .Values.wordpress.configExtraConfigMap.name  (not .Values.wordpress.configExtraSecret.name) }}
             - name: WORDPRESS_CONFIG_EXTRA
               valueFrom:
                 configMapKeyRef:
                   name: {{ .Values.wordpress.configExtraConfigMap.name }}
                   key: {{ .Values.wordpress.configExtraConfigMap.key | default "wordpress.configExtra" }}
           {{- end }}
-          {{ if .Values.wordpress.configExtraSecret.name }}  
+          {{ if .Values.wordpress.configExtraSecret.name }}
             - name: WORDPRESS_CONFIG_EXTRA
               valueFrom:
                 secretKeyRef:
@@ -431,7 +442,7 @@ spec:
           livenessProbe:
             {{- toYaml .Values.customLivenessProbe | nindent 12 }}
           {{- else if .Values.livenessProbe.enabled }}
-          livenessProbe: 
+          livenessProbe:
             {{- toYaml (omit .Values.livenessProbe "enabled") | nindent 12 }}
             httpGet:
               path: /wp-login.php
@@ -446,7 +457,7 @@ spec:
           readinessProbe:
             {{- toYaml .Values.customReadinessProbe | nindent 12 }}
           {{- else if .Values.readinessProbe.enabled }}
-          readinessProbe: 
+          readinessProbe:
             {{- toYaml (omit .Values.readinessProbe "enabled") | nindent 12 }}
             httpGet:
               path: /wp-login.php
@@ -499,7 +510,7 @@ spec:
         - name: metrics-apache
           image: {{ include "slycharts.image" (dict "image" .Values.metrics.apache.image) }}
           imagePullPolicy: {{ .Values.metrics.apache.image.pullPolicy | quote }}
-          command: 
+          command:
             - sh
             - -c
             - |
@@ -616,7 +627,7 @@ spec:
               name: {{ .Values.wordpress.htaccessConfigMap }}
               items:
                 - key: htaccess
-                  path: .htaccess 
+                  path: .htaccess
           {{- end }}
       - name: {{ include "wordpress.fullname" . }}-init
         configMap:
